# musubi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: labels.yml  release.yml
.github/scripts/: add-pr-label.sh  check-branch-name.sh
.github/workflows/: auto-labeler.yml  check-branch-name.yml  manual_release.yml  publish.yml  sync-labels.yml
data/: sample.csv
python/: embed_csv.py  embed_text.py  embedding_server.py
scripts/: download_ann_data.sh
src/: lib.rs  main.rs
src/application/: config.rs  error.rs  service.rs
src/application/service/: compaction.rs  core.rs  ingestion.rs  job_store.rs  load.rs  read.rs  search.rs  tests.rs  traits.rs  types.rs  util.rs  write.rs
src/domain/: model.rs  ports.rs  types.rs
src/index/: hnsw.rs  metrics.rs  mod.rs  neighbor.rs
src/infrastructure/: chunking.rs  embedding.rs  index.rs  mod.rs  storage.rs
src/infrastructure/chunking/: fixed.rs  noop.rs  semantic.rs
src/infrastructure/embedding/: http.rs  noop.rs  python.rs
src/infrastructure/index/: adapter.rs  hnsw.rs  metrics.rs  neighbor.rs
src/infrastructure/search/: bm25.rs  mod.rs
src/infrastructure/storage/: chunk_store.rs  file.rs  mod.rs  pending_store.rs  record_store.rs  wal.rs
src/interface/http/: server.rs
src/storage/: file.rs  wal.rs
