[package]
name = "musubi"
version = "0.1.0"
edition = "2021"
description = "A minimal HNSW (Hierarchical Navigable Small World) implementation"

[dependencies]
rand = "0.8"
ordered-float = "4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Benchmark dependencies
hdf5 = "0.8"
ndarray = "0.15"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bench_ann"
path = "src/bin/bench_ann.rs"
